pyinterp/pyinterp/pyinterp/tests/must_pass/errors/missing_arg4.py
def f():
    pass
f(1)
